Sidebar navbar scroll issue fix for sidebar and sidebar-home
The homepage and many other pages have scrolling issues with the left
and right scrollbars if content is expanded. There is a function called
checkNavSizes() in docs.js that tried to fix this issue I believe but
was incomplete. Because the homepage is different from the other page, a
check is needed and the sidebar height is set accordingly. The other
pages just needed to set the correct tags with the correct height when
the footer came into view.

layout.scss needed the transition style removed or setting the height
would not be instant on the right side menu

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -165,7 +165,7 @@ section.section {
     right: 250px;
     margin-right: -250px;
     width: 0;
-    transition: all 0.5s ease;
+    //transition: all 0.5s ease;
 }
 
 #sidebar-right {
